--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
     </figure>
   </section>
 
+  <footer>
+    &copy; 2014 Exceptional Realty Group. All Rights Reserved.
+  </footer>
+</body>
   </body>
 </html>
